<resources>
    <string name="app_name">Hotel_App</string>
    <string name="back_button_content_description">Назад</string>
    <string name="text_dash">—</string>
    <string name="button_retry">Повторить</string>
    <string name="paid_status">Оплачено</string>
    <string name="nav_dashboard">Главная</string>
    <string name="nav_services">Услуги</string>
    <string name="nav_key">Ключ</string>
    <string name="nav_maps">Карта</string>
    <string name="nav_info">Инфо</string>
    <string name="nfc_digital_key">Электронный ключ</string>
    <string name="room_number_format">Номер %1$s</string>
    <string name="room_empty">Номер ---</string>
    <string name="valid_until_format">Действует до: %1$s</string>
    <string name="valid_until_empty">Действует до: --/--/--</string>
    <string name="key_active_status">Ключ активен. Поднесите телефон к замку.</string>
    <string name="no_key_status">Нет активного ключа. Сначала зарегистрируйтесь.</string>
    <string name="simulate_nfc_scan">Симулировать NFC (Открыть дверь)</string>
    <string name="request_digital_key">Получить электронный ключ</string>
    <string name="last_used_format">Использован: %1$s</string>
    <string name="last_used_never">Использован: Никогда</string>
    <string name="ready_to_unlock">Готов к открытию</string>
    <string name="booking_toolbar_title">Бронирование номера</string>
    <string name="booking_step_select_room">1. Выберите номер</string>
    <string name="booking_step_select_dates">2. Выберите даты</string>
    <string name="booking_step_guest_info">3. Информация о госте</string>
    <string name="booking_hint_check_in">Дата заезда</string>
    <string name="booking_hint_check_out">Дата выезда</string>
    <string name="booking_hint_full_name">ФИО</string>
    <string name="booking_summary_title">Информация о бронировании</string>
    <string name="booking_summary_room_format">Номер: %1$s #%2$s</string>
    <string name="booking_summary_dates_format">Даты: %1$s - %2$s</string>
    <string name="booking_summary_dates_select">Даты: Выберите даты</string>
    <string name="booking_summary_price_per_night">%1$d$ / ночь</string>
    <string name="booking_summary_total_format">Итого: %1$d$</string>
    <string name="booking_button_book">Забронировать</string>
    <string name="booking_dialog_confirmed_title">Бронирование подтверждено!</string>
    <string name="booking_dialog_confirmed_message">%1$s\n\nВаш электронный NFC ключ автоматически создан и готов к использованию.</string>
    <string name="booking_dialog_view_key">Посмотреть ключ</string>
    <string name="booking_dialog_back_to_dashboard">На главную</string>
    <string name="booking_error_no_room">Выберите номер</string>
    <string name="booking_error_no_dates">Выберите даты заезда и выезда</string>
    <string name="booking_error_no_guest_name">Введите имя гостя</string>
    <string name="dashboard_welcome">Добро пожаловать,</string>
    <string name="dashboard_quick_action_key">Мой ключ</string>
    <string name="dashboard_quick_action_booking">Бронирование</string>
    <string name="dashboard_quick_action_services">Услуги</string>
    <string name="dashboard_hotel_info_button">Информация об отеле</string>
    <string name="dashboard_recommended_title">Рекомендуем для вас</string>
    <string name="dashboard_error_load_recommendations">Не удалось загрузить рекомендации</string>
    <string name="dashboard_button_retry">Повторить</string>
    <string name="dashboard_current_booking_title">Текущее бронирование</string>
    <string name="dashboard_no_active_booking">Нет активного бронирования</string>
    <string name="dashboard_tap_to_reserve">Нажмите Бронирование для выбора номера</string>
    <string name="dashboard_bookings_count_format">Бронирований: %1$d</string>
    <string name="dashboard_paid_services_title">Оплаченные услуги</string>
    <string name="dashboard_no_paid_services">Нет оплаченных услуг</string>
    <string name="dashboard_special_offers">Специальные предложения</string>
    <string name="payment_toolbar_title">Оплата</string>
    <string name="payment_room_title_format">Оплата номера %1$s</string>
    <string name="payment_timer_format">Оплата через: %1$dс</string>
    <string name="payment_amount_format">Сумма: %1$d$</string>
    <string name="payment_button_pay">Оплатить</string>
    <string name="payment_button_cancel">Отмена</string>
    <string name="payment_button_continue">Перейти к ключу</string>
    <string name="payment_success_message">Оплата прошла успешно!</string>
    <string name="payment_cancelled_message">Оплата отменена</string>
    <string name="payment_dialog_title">Оплата услуги</string>
    <string name="payment_dialog_message_format">%1$s\n\nЦена: %2$d$\n\nОплатить эту услугу?</string>
    <string name="payment_dialog_pay_button">Оплатить</string>
    <string name="payment_dialog_cancel_button">Отмена</string>
    <string name="payment_timer_text_format">Оплата через: %1$dс</string>
    <string name="payment_amount_text_format">Сумма: %1$d$</string>
    <string name="payment_toolbar_title_format">Оплата номера %1$s</string>
    <string name="room_price_per_night_format">%1$d$ / ночь</string>
    <string name="room_status_available">Свободен</string>
    <string name="room_status_booked">Занят</string>
    <string name="room_type_status_format">%1$s • %2$s</string>
    <string name="room_status_available_en">Available</string>
    <string name="room_status_booked_en">Booked</string>
    <string name="room_image_content_description">Изображение номера</string>
    <string name="services_toolbar_title">Услуги</string>
    <string name="services_search_hint">Поиск услуг</string>
    <string name="services_category_all">Все</string>
    <string name="services_category_spa">СПА</string>
    <string name="services_category_transfer">Трансфер</string>
    <string name="services_category_food">Еда</string>
    <string name="services_category_other">Другое</string>
    <string name="services_not_found">Услуги не найдены</string>
    <string name="services_dialog_payment_title">Оплата услуги</string>
    <string name="services_dialog_payment_message_format">%1$s\n\nЦена: %2$d$\n\nОплатить эту услугу?</string>
    <string name="services_dialog_pay_button">Оплатить</string>
    <string name="services_dialog_cancel_button">Отмена</string>
    <string name="services_paid_status">Оплачено</string>
    <string name="services_price_format">%1$d$</string>
    <string name="services_service_paid_format">Услуга \'%1$s\' оплачена!</string>
    <string name="reviews_toolbar_title">Отзывы</string>
    <string name="reviews_error_empty_name">Введите ваше имя</string>
    <string name="reviews_error_empty_rating">Выберите рейтинг от 1 до 5</string>
    <string name="reviews_error_empty_text">Введите текст отзыва</string>
    <string name="reviews_success_message">Отзыв отправлен!</string>
    <string name="reviews_date_format">dd MMM yyyy</string>
    <string name="reviews_star_filled">★</string>
    <string name="reviews_star_empty">☆</string>
    <string name="maps_toolbar_title">Рестораны рядом</string>
    <string name="maps_hotel_marker_title">Grand Hotel</string>
    <string name="maps_hotel_marker_snippet">Ваш отель</string>
    <string name="maps_restaurant_snippet_format">%1$s • %2$s★ • %3$s км</string>
    <string name="maps_route_toast_format">Маршрут до %1$s</string>
    <string name="maps_call_toast_format">Звонок в %1$s</string>
    <string name="maps_restaurant_rating_format">Рейтинг: %1$s★</string>
    <string name="maps_restaurant_distance_format">Расстояние: %1$s км</string>
    <string name="maps_button_route">Маршрут</string>
    <string name="maps_button_call">Позвонить</string>
    <string name="hotel_info_toolbar_title">Информация об отеле</string>
    <string name="hotel_info_recommend_title">Рекомендуем</string>
    <string name="hotel_info_tab_events">Мероприятия</string>
    <string name="hotel_info_tab_map">Карта</string>
    <string name="hotel_info_tab_contacts">Контакты</string>
    <string name="hotel_info_events_error">Нет данных о мероприятиях</string>
    <string name="hotel_info_load_error_format">Ошибка загрузки: %1$s</string>
    <string name="hotel_info_retry_button">Повторить</string>
    <string name="hotel_info_contacts_title">Контакты отеля</string>
    <string name="hotel_info_reception">🕐 Ресепшн: 24/7</string>
    <string name="hotel_info_phone_label">📞 Телефон:</string>
    <string name="hotel_info_phone_value">+7 (800) 555-35-35</string>
    <string name="hotel_info_email_label">📧 Email:</string>
    <string name="hotel_info_email_value">info@hotel.ru</string>
    <string name="hotel_info_address_label">📍 Адрес:</string>
    <string name="hotel_info_map_content_description">Карта отеля</string>
    <string name="error_cannot_call">Не удалось выполнить звонок</string>
    <string name="error_cannot_email">Не удалось открыть почтовый клиент</string>
    <string name="nfc_key_room_format">НОМЕР %1$s</string>
    <string name="nfc_key_valid_until_format">Действует до: %1$s</string>
    <string name="nfc_key_last_used_format">Использован: %1$s</string>
    <string name="nfc_key_last_used_never">Никогда</string>
    <string name="nfc_key_room_type_deluxe">Deluxe Suite</string>
    <string name="nfc_key_valid_until_label">Действует до:</string>
    <string name="nfc_key_last_used_label">Использован:</string>
    <string name="key_no_key_selected">Нет выбранного ключа</string>
    <string name="key_room_access_title">Доступ к номеру</string>
    <string name="paid_service_price_format">%1$d$</string>
    <string name="paid_service_paid_status">Оплачено</string>
    <string name="menu_caesar_chicken">Цезарь с курицей</string>
    <string name="menu_borscht_moscow">Борщ московский</string>
    <string name="menu_steak_ribeye">Стейк рибай</string>
    <string name="menu_salmon_grill">Лосось на гриле</string>
    <string name="menu_pasta_carbonara">Паста Карбонара</string>
    <string name="menu_tiramisu">Тирамису</string>
    <string name="menu_cheesecake_ny">Чизкейк Нью-Йорк</string>
    <string name="menu_coffee_espresso">Кофе эспрессо</string>
    <string name="menu_fresh_juice">Свежевыжатый сок</string>
    <string name="menu_description_caesar">Салат с курицей, пармезаном и сухариками</string>
    <string name="menu_description_borscht">Традиционный русский суп со сметаной</string>
    <string name="menu_description_steak">Сочный стейк из мраморной говядины</string>
    <string name="menu_description_salmon">Свежий лосось с овощами</string>
    <string name="menu_description_pasta">Классическая итальянская паста</string>
    <string name="menu_description_tiramisu">Итальянский десерт с маскарпоне</string>
    <string name="menu_description_cheesecake">Классический чизкейк</string>
    <string name="menu_description_coffee">Арабика 100%</string>
    <string name="menu_description_juice">Апельсиновый или яблочный</string>
    <string name="restaurant_pushkin_name">Кафе Пушкинъ</string>
    <string name="restaurant_pushkin_cuisine">Русская</string>
    <string name="restaurant_pushkin_address">Тверской бульвар, 26А</string>
    <string name="restaurant_pushkin_phone">+7 (495) 123-45-67</string>
    <string name="restaurant_white_rabbit_name">White Rabbit</string>
    <string name="restaurant_white_rabbit_cuisine">Европейская</string>
    <string name="restaurant_white_rabbit_address">Смоленская площадь, 3</string>
    <string name="restaurant_white_rabbit_phone">+7 (495) 234-56-78</string>
    <string name="restaurant_turandot_name">Турандот</string>
    <string name="restaurant_turandot_cuisine">Паназиатская</string>
    <string name="restaurant_turandot_address">Тверской бульвар, 26</string>
    <string name="restaurant_turandot_phone">+7 (495) 345-67-89</string>
    <string name="restaurant_syrovarnya_name">Сыроварня</string>
    <string name="restaurant_syrovarnya_cuisine">Итальянская</string>
</resources>