<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/servicesFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_services" />
    <item
        android:id="@+id/keyFragment"
        android:icon="@android:drawable/ic_lock_lock"
        android:title="@string/nav_key" />
    <item
        android:id="@+id/mapsFragment"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/nav_maps" />
    <item
        android:id="@+id/hotelInfoFragment"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_info" />
</menu>
